api v3.0.0 - return hrefs on create, id and *_id are returned as string.

--- a/api/examples/add_service_catalog.adoc
+++ b/api/examples/add_service_catalog.adoc
@@ -30,7 +30,8 @@ POST /api/service_catalogs
 {
   "results": [
     {
-      "id": 7,
+      "id": "7",
+      "href" : "http://localhost:3000/api/service_catalogs/7",
       "name": "Sample Service Catalog",
       "description": "Description of Sample Service Catalog"
     }
