--- a/api/examples/add_service_catalogs.adoc
+++ b/api/examples/add_service_catalogs.adoc
@@ -48,17 +48,20 @@ POST /api/service_catalogs
 {
   "results": [
     {
-      "id": 8,
+      "id": "8",
+      "href" : "http://localhost:3000/api/service_catalogs/8",
       "name": "First Sample Service Catalog",
       "description": "Description of First Sample Service Catalog"
     },
     {
-      "id": 9,
+      "id": "9",
+      "href" : "http://localhost:3000/api/service_catalogs/9",
       "name": "Second Sample Service Catalog",
       "description": "Description of Second Sample Service Catalog"
     },
     {
-      "id": 10,
+      "id": "10",
+      "href" : "http://localhost:3000/api/service_catalogs/10",
       "name": "Third Sample Service Catalog",
       "description": "Description of Third Sample Service Catalog"
     }
