--- a/api/examples/automation_request.adoc
+++ b/api/examples/automation_request.adoc
@@ -81,13 +81,14 @@ POST /api/automation_requests
 {
   "results": [
     {
-      "id": 12,
+      "id": "12",
+      "href" : "http://localhost:3000/api/automation_requests/12",
       "description": "Automation Task",
       "approval_state": "approved",
       "type": "AutomationRequest",
       "created_on": "2015-04-16T21:49:55Z",
       "updated_on": "2015-04-16T21:49:55Z",
-      "requester_id": 1,
+      "requester_id": "1",
       "requester_name": "Administrator",
       "request_type": "automation",
       "request_state": "pending",
@@ -97,7 +98,7 @@ POST /api/automation_requests
         "namespace": "System",
         "class_name": "Request",
         "instance_name": "InspectME",
-        "user_id": 1,
+        "user_id": "1",
         "attrs": {
           "var1": "xxxxx",
           "var2": "yyyyy",
