--- a/api/examples/custom_action_service.adoc
+++ b/api/examples/custom_action_service.adoc
@@ -19,11 +19,11 @@ GET /api/services/110?attributes=custom_actions
 ----
 {
   "href": "http://localhost:3000/api/services/110",
-  "id": 110,
+  "id": "110",
   "name": "SampleServiceTemplate",
   "description": "Sample Service Template",
   "guid": "a3ab175c-8ca1-11e5-939f-000a27020067",
-  "service_template_id": 9,
+  "service_template_id": "9",
   "options": {
     "button_order": [
       "cb-10"
@@ -37,13 +37,13 @@ GET /api/services/110?attributes=custom_actions
   "display": true,
   "created_at": "2015-11-16T20:35:56Z",
   "updated_at": "2015-11-16T20:35:56Z",
-  "evm_owner_id": 1,
-  "miq_group_id": 1,
-  "tenant_id": 1,
+  "evm_owner_id": "1",
+  "miq_group_id": "1",
+  "tenant_id": "1",
   "custom_actions": {
     "buttons": [
       {
-        "id": 10,
+        "id": "10",
         "guid": "cdcec41c-8ca0-11e5-8c79-000a27020067",
         "description": "Query VM",
         "applies_to_class": "ServiceTemplate",
@@ -60,11 +60,11 @@ GET /api/services/110?attributes=custom_actions
             "_ALL_"
           ]
         },
-        "applies_to_id": 9,
+        "applies_to_id": "9",
         "resource_action": {
-          "id": 38,
-          "dialog_id": 4,
-          "resource_id": 10,
+          "id": "38",
+          "dialog_id": "4",
+          "resource_id": "10",
           "resource_type": "CustomButton",
           "created_at": "2015-11-16T20:29:58Z",
           "updated_at": "2015-11-16T20:29:58Z",
