--- a/api/examples/delete_vm.adoc
+++ b/api/examples/delete_vm.adoc
@@ -41,14 +41,14 @@ DELETE /api/vms
     {
       "success": true,
       "message": "VM id:348 name:'aab-temp1' deleting",
-      "task_id": 616,
+      "task_id": "616",
       "task_href": "http://localhost:3000/api/tasks/616",
       "href": "http://localhost:3000/api/vms/348"
     },
     {
       "success": true,
       "message": "VM id:349 name:'aab-temp2' deleting",
-      "task_id": 617,
+      "task_id": "617",
       "task_href": "http://localhost:3000/api/tasks/617",
       "href": "http://localhost:3000/api/vms/349"
     }
@@ -73,7 +73,7 @@ GET /api/tasks/616
 ----
 {
   "href": "http://localhost:3000/api/tasks/616",
-  "id": 616,
+  "id": "616",
   "name": "VM id:348 name:'aab-temp1' deleting",
   "state": "Finished",
   "status": "Ok",
