--- a/api/examples/edit_service_catalogs.adoc
+++ b/api/examples/edit_service_catalogs.adoc
@@ -32,12 +32,14 @@ POST /api/service_catalogs
 {
   "results": [
     {
-      "id": 3,
+      "id" : "3",
+      "href" : "http://localhost:3000/api/service_catalogs/3",
       "name": "Service Catalog B Added from REST API",
       "description": "Updated Description for Third Service Catalog"
     },
     {
-      "id": 6,
+      "id" : "6",
+      "href" : "http://localhost:3000/api/service_catalogs/6",
       "name": "Service Catalog E Added from REST API",
       "description": "Updated Description for Sixth Service Catalog"
     }
