--- a/api/examples/edit_services.adoc
+++ b/api/examples/edit_services.adoc
@@ -32,7 +32,8 @@ POST /api/services
 {
   "results": [
     {
-      "id": 81,
+      "href": "http://localhost:3000/api/services/81",
+      "id": "81",
       "name": "api_gen_A_81",
       "description": "This is an updated description for service 81",
       "guid": "eb6daaf8-7c9b-11e4-8a3a-b8e85646e742",
@@ -42,7 +43,8 @@ POST /api/services
       "updated_at": "2015-04-16T22:43:37Z"
     },
     {
-      "id": 82,
+      "href": "http://localhost:3000/api/services/82",
+      "id": "82",
       "name": "api_gen_A_82",
       "description": "This is an updated description for service 82",
       "guid": "eb6de400-7c9b-11e4-8a3a-b8e85646e742",
