--- a/api/examples/order_services.adoc
+++ b/api/examples/order_services.adoc
@@ -46,7 +46,7 @@ POST /api/service_catalogs/2/service_templates
       "destination_id": null,
       "destination_type": null,
       "fulfilled_on": null,
-      "id": 13,
+      "id": "13",
       "message": "Service_Template_Provisioning - Request Created",
       "options": {
         "dialog": {
@@ -56,9 +56,9 @@ POST /api/service_catalogs/2/service_templates
     }
     "request_state": "pending",
     "request_type": "clone_to_service",
-    "requester_id": 1,
+    "requester_id": "1",
     "requester_name": "Administrator",
-    "source_id": 6,
+    "source_id": "6",
     "source_type": "ServiceTemplate",
     "status": "Ok",
     "updated_on": "2014-07-02T19:28:12Z",
@@ -71,7 +71,7 @@ POST /api/service_catalogs/2/service_templates
       "destination_id": null,
       "destination_type": null,
       "fulfilled_on": null,
-      "id": 13,
+      "id": "13",
       "message": "Service_Template_Provisioning - Request Created",
       "options": {
         "dialog": {
@@ -81,9 +81,9 @@ POST /api/service_catalogs/2/service_templates
     }
     "request_state": "pending",
     "request_type": "clone_to_service",
-    "requester_id": 1,
+    "requester_id": "1",
     "requester_name": "Administrator",
-    "source_id": 6,
+    "source_id": "6",
     "source_type": "ServiceTemplate",
     "status": "Ok",
     "updated_on": "2014-07-02T19:28:12Z",
@@ -96,7 +96,7 @@ POST /api/service_catalogs/2/service_templates
       "destination_id": null,
       "destination_type": null,
       "fulfilled_on": null,
-      "id": 13,
+      "id": "13",
       "message": "Service_Template_Provisioning - Request Created",
       "options": {
         "dialog": {
@@ -106,9 +106,9 @@ POST /api/service_catalogs/2/service_templates
     }
     "request_state": "pending",
     "request_type": "clone_to_service",
-    "requester_id": 1,
+    "requester_id": "1",
     "requester_name": "Administrator",
-    "source_id": 6,
+    "source_id": "6",
     "source_type": "ServiceTemplate",
     "status": "Ok",
     "updated_on": "2014-07-02T19:28:12Z",
