--- a/api/examples/provision_request.adoc
+++ b/api/examples/provision_request.adoc
@@ -94,13 +94,14 @@ POST /api/provision_requests
 {
   "results": [
     {
-      "id": 18,
+      "href" : "http://localhost:3000/api/provision_requests/18",
+      "id": "18",
       "description": "Provision from [bd-clone-template] to [aab_rest_vm1]",
       "approval_state": "pending_approval",
       "type": "MiqProvisionRequest",
       "created_on": "2015-05-08T17:42:55Z",
       "updated_on": "2015-05-08T17:42:55Z",
-      "requester_id": 1,
+      "requester_id": "1",
       "requester_name": "Administrator",
       "request_type": "template",
       "request_state": "pending",
