--- a/api/examples/provision_requests.adoc
+++ b/api/examples/provision_requests.adoc
@@ -93,13 +93,14 @@ POST /api/provision_requests
 {
   "results": [
     {
-      "id": 19,
+      "href": "http://localhost:3000/api/provision_requests/19",
+      "id": "19",
       "description": "Provision from [bd-clone-template] to [aab_rest_vm1]",
       "approval_state": "pending_approval",
       "type": "MiqProvisionRequest",
       "created_on": "2015-05-08T18:25:25Z",
       "updated_on": "2015-05-08T18:25:26Z",
-      "requester_id": 1,
+      "requester_id": "1",
       "requester_name": "jdoe",
       "request_type": "template",
       "request_state": "pending",
@@ -233,17 +234,18 @@ POST /api/provision_requests
         }
       },
       "userid": "jdoe",
-      "source_id": 1947,
+      "source_id": "1947",
       "source_type": "VmOrTemplate"
     },
     {
-      "id": 20,
+      "href": "http://localhost:3000/api/provision_requests/20",
+      "id": "20",
       "description": "Provision from [bd-clone-template] to [aab_rest_vm2]",
       "approval_state": "pending_approval",
       "type": "MiqProvisionRequest",
       "created_on": "2015-05-08T18:25:28Z",
       "updated_on": "2015-05-08T18:25:29Z",
-      "requester_id": 1,
+      "requester_id": "1",
       "requester_name": "jdoe",
       "request_type": "template",
       "request_state": "pending",
@@ -377,17 +379,18 @@ POST /api/provision_requests
         }
       },
       "userid": "jdoe",
-      "source_id": 1947,
+      "source_id": "1947",
       "source_type": "VmOrTemplate"
     },
     {
-      "id": 21,
+      "href": "http://localhost:3000/api/provision_requests/21",
+      "id": "21",
       "description": "Provision from [bd-clone-template] to [aab_rest_vm3]",
       "approval_state": "pending_approval",
       "type": "MiqProvisionRequest",
       "created_on": "2015-05-08T18:25:32Z",
       "updated_on": "2015-05-08T18:25:32Z",
-      "requester_id": 1,
+      "requester_id": "1",
       "requester_name": "jdoe",
       "request_type": "template",
       "request_state": "pending",
@@ -521,7 +524,7 @@ POST /api/provision_requests
         }
       },
       "userid": "jdoe",
-      "source_id": 1947,
+      "source_id": "1947",
       "source_type": "VmOrTemplate"
     }
   ]
