--- a/api/examples/refresh_dialog_fields.adoc
+++ b/api/examples/refresh_dialog_fields.adoc
@@ -86,7 +86,7 @@ POST /api/service_catalogs/1/service_templates
           }
         }
       },
-      "service_template_id": 1,
+      "service_template_id": "1",
       "service_template_href": "http://localhost:3000/api/service_templates/1",
       "href": "http://localhost:3000/api/service_catalogs/1"
     }
