--- a/api/examples/refresh_provider.adoc
+++ b/api/examples/refresh_provider.adoc
@@ -23,11 +23,11 @@ POST /api/providers/105
   "success": true,
   "message": "Provider id:105 name:'sample_provider' refreshing",
   "href": "http://localhost:3000/api/providers/105",
-  "task_id" : 23,
+  "task_id" : "23",
   "task_href" : "http://localhost:3000/api/tasks/23",
   "tasks" : [
-    { "id" : 23, "href" : "http://localhost:3000/api/tasks/23"},
-    { "id" : 24, "href" : "http://localhost:3000/api/tasks/24"}
+    { "id" : "23", "href" : "http://localhost:3000/api/tasks/23"},
+    { "id" : "24", "href" : "http://localhost:3000/api/tasks/24"}
   ]
 }
 ----
