--- a/api/examples/retire_services.adoc
+++ b/api/examples/retire_services.adoc
@@ -27,7 +27,8 @@ POST /api/services
 {
   "results": [
     {
-      "id": 100,
+      "href": "http://localhost:3000/api/services/100",
+      "id": "100",
       "name": "cloud_service_100",
       "description": "Description for cloud_service_100",
       "guid": "eb725f94-7c9b-11e4-8a3a-b8e85646e742",
@@ -37,7 +38,8 @@ POST /api/services
       "updated_at": "2015-05-08T19:46:11Z"
     },
     {
-      "id": 101,
+      "href": "http://localhost:3000/api/services/101",
+      "id": "101",
       "name": "cloud_service_101",
       "description": "Description for cloud_service_101",
       "guid": "4a8f96de-a1a6-11e4-9f8d-b8e85646e742",
@@ -50,7 +52,8 @@ POST /api/services
       "retirement_warn": 4
     },
     {
-      "id": 102,
+      "href": "http://localhost:3000/api/services/102",
+      "id": "102",
       "name": "cloud_service_102",
       "description": "Description for cloud_service_102",
       "guid": "e2da0cb0-e47e-11e4-a47f-b8e85646e742",
