--- a/api/examples/scan_vm.adoc
+++ b/api/examples/scan_vm.adoc
@@ -22,7 +22,7 @@ POST /api/vms/1922
 {
   "success": true,
   "message": "VM id:1922 name:'aab_test_vm' scanning",
-  "task_id": 618,
+  "task_id": "618",
   "task_href": "http://localhost:3000/api/tasks/618",
   "href": "http://localhost:3000/api/vms/1922"
 }
@@ -41,7 +41,7 @@ GET /api/tasks/618
 ----
 {
   "href": "http://localhost:3000/api/tasks/618",
-  "id": 618,
+  "id": "618",
   "name": "VM id:1922 name:'aab_test_vm' scanning",
   "state": "Finished",
   "status": "Ok",
