--- a/api/examples/start_vm.adoc
+++ b/api/examples/start_vm.adoc
@@ -22,7 +22,7 @@ POST /api/vms/1921
 {
   "success": true,
   "message": "VM id:1921 name:'aab_demo_vm' starting",
-  "task_id": 610,
+  "task_id": "610",
   "task_href": "http://localhost:3000/api/tasks/610",
   "href": "http://localhost:3000/api/vms/1921"
 }
@@ -41,7 +41,7 @@ GET /api/tasks/620
 ----
 {
   "href": "http://localhost:3000/api/tasks/610",
-  "id": 610,
+  "id": "610",
   "name": "VM id:1921 name:'aab_demo_vm' starting",
   "state": "Queued",
   "status": "Ok",
