--- a/api/overview/query.adoc
+++ b/api/overview/query.adoc
@@ -95,13 +95,13 @@ serialization of the resource instead:
   "subcount" : 2,
   "resources" : [
     {
-      "id" : 1,
+      "id" : "1",
       "href" : "http://localhost:3000/api/vms/1",
       "name" : "My First VM",
       ...
     },
     {
-      "id" : 2,
+      "id" : "2",
       "href" : "http://localhost:3000/api/vms/2",
       "name" : "My Second VM",
       ...
@@ -130,14 +130,14 @@ GET /api/vms/166?expand=software&attributes=ipaddresses,lans,storage
 ----
 {
   "href": "http://localhost:3000/api/vms/166",
-  "id": 166,
+  "id": "166",
   "vendor": "vmware",
   "name": "Dev Nightly Appl",
   "location": "Nightly Appl 201.vmx",
-  "host_id": 4,
+  "host_id": "4",
   "created_on": "2014-11-20T19:37:28Z",
   "updated_on": "2015-03-07T04:32:33Z",
-  "storage_id": 12,
+  "storage_id": "12",
   "guid": "a9409862-70ec-11e4-90c6-b8e85646e742",
   "uid_ems": "422f50c6-2ba6-1059-338d-423cc3daf5b4",
   "tools_status": "toolsNotRunning",
@@ -157,8 +157,8 @@ GET /api/vms/166?expand=software&attributes=ipaddresses,lans,storage
   ],
   "lans": [
     {
-      "id": 8,
-      "switch_id": 6,
+      "id": "8",
+      "switch_id": "6",
       "name": "VM Network",
       "tag": "0",
       "created_on": "2014-11-20T19:37:23Z",
@@ -170,7 +170,7 @@ GET /api/vms/166?expand=software&attributes=ipaddresses,lans,storage
     }
   ],
   "storage": {
-    "id": 12,
+    "id": "12",
     "name": "StarM1-Dev",
     "store_type": "VMFS",
     "total_space": 2134061875200,
@@ -190,10 +190,10 @@ GET /api/vms/166?expand=software&attributes=ipaddresses,lans,storage
   "software": [
     {
       "href": "http://localhost:3000/api/vms/320/software/1",
-      "id": 1,
+      "id": "1",
       "name": "OpenOffice",
       "vendor": "OpenOffice.org",
-      "vm_or_template_id": 166
+      "vm_or_template_id": "166"
     }
   ]
 }
@@ -218,7 +218,7 @@ GET /api/hosts/8?attributes=ext_management_system.id,ext_management_system.guid,
 ----
 {
   "href": "http://localhost:3000/api/hosts/8",
-  "id": 8,
+  "id": "8",
   "name": "test1.sample.com",
   "hostname": "test1.sample.com",
   "ipaddress": "test1.sample.com",
@@ -230,7 +230,7 @@ GET /api/hosts/8?attributes=ext_management_system.id,ext_management_system.guid,
   "ext_management_system": {
     "name": "vcenter50",
     "guid": "e84e8c58-bdbd-11e4-8983-b8e85646e742",
-    "id": 6
+    "id": "6"
   }
 }
 ----
@@ -246,7 +246,7 @@ GET /api/vms/166?attributes=name,raw_power_state,ipaddresses,storage.name
 ----
 {
   "href": "http://localhost:3000/api/vms/166",
-  "id": 166,
+  "id": "166",
   "name": "Dev Nightly Appl",
   "raw_power_state": "poweredOff",
   "ipaddresses": [
