--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -66,7 +66,6 @@ Allow operator characters on the RHS of filter https://github.com/ManageIQ/manag
 Make namespace into a virtual attribute https://github.com/ManageIQ/manageiq/pull/15532
 Floating IPs https://github.com/ManageIQ/manageiq/pull/15524
 Network Routers https://github.com/ManageIQ/manageiq/pull/15450
-Removed support for Compressed Ids
 Redirect tasks subcollection to request_tasks https://github.com/ManageIQ/manageiq/pull/15357
 Remove miq_server https://github.com/ManageIQ/manageiq/pull/15284
 set_miq_server Action https://github.com/ManageIQ/manageiq/pull/15262
@@ -75,7 +74,7 @@ Add paging links to the API https://github.com/ManageIQ/manageiq/pull/15148
 Add support for Cloud Volume Delete action https://github.com/ManageIQ/manageiq/pull/15097
 configuration_script_sources subcollection https://github.com/ManageIQ/manageiq/pull/15070
 Return BadRequestError when invalid attributes are specified https://github.com/ManageIQ/manageiq/pull/15040
-Return href on create https://github.com/ManageIQ/manageiq/pull/15005
+Return hrefs on create,
 Enable custom actions for several collections,
 Support DELETE method for Custom Attributes,
 Support multi-manager Provider refreshes,
