--- a/api/reference/arbitration_profiles.adoc
+++ b/api/reference/arbitration_profiles.adoc
@@ -58,8 +58,8 @@ or creating multiple arbitration profiles:
 {
   "action" : "create",
   "resources" : [
-    { "name" : "aws arbitration default",           "provider" : { "id" : 5 } },
-    { "name" : "aws test environment arbitration",  "provider" : { "id" : 5 } },
+    { "name" : "aws arbitration default",           "provider" : { "id" : "5" } },
+    { "name" : "aws test environment arbitration",  "provider" : { "id" : "5" } },
     ...
   ]
 }
