--- a/api/reference/arbitration_rules.adoc
+++ b/api/reference/arbitration_rules.adoc
@@ -46,7 +46,7 @@ POST /api/arbitration_rules
 {
   "description" : "admin rule",
   "operation" : "inject",
-  "arbitration_profile_id" : 5,
+  "arbitration_profile_id" : "5",
   "expression" : {
     "EQUAL" : {
       "field" : "User-userid",
