--- a/api/reference/automate.adoc
+++ b/api/reference/automate.adoc
@@ -66,7 +66,7 @@ GET /api/automate
       "fqname": "/ManageIQ",
       "domain_fqname": "/",
       "klass": "MiqAeDomain",
-      "id": 2352,
+      "id": "2352",
       "name": "ManageIQ",
       "created_on": "2016-10-31T14:58:09Z",
       "updated_on": "2016-10-31T14:58:09Z",
@@ -74,7 +74,7 @@ GET /api/automate
       "updated_by": "system",
       "priority": 0,
       "enabled": true,
-      "tenant_id": 1,
+      "tenant_id": "1",
       "source": "system"
     },
     ...
@@ -135,7 +135,7 @@ GET /api/automate/manageiq
       "fqname": "/ManageIQ",
       "domain_fqname": "/",
       "klass": "MiqAeDomain",
-      "id": 2352,
+      "id": "2352",
       "name": "ManageIQ",
       "created_on": "2016-10-31T14:58:09Z",
       "updated_on": "2016-10-31T14:58:09Z",
@@ -143,7 +143,7 @@ GET /api/automate/manageiq
       "updated_by": "system",
       "priority": 0,
       "enabled": true,
-      "tenant_id": 1,
+      "tenant_id": "1",
       "source": "system"
     }
   ]
@@ -167,12 +167,12 @@ GET /api/automate/manageiq/system/request
       "fqname": "/ManageIQ/System/Request",
       "domain_fqname": "/System/Request",
       "klass": "MiqAeClass",
-      "id": 75,
+      "id": "75",
       "description": "Automation Requests",
       "name": "Request",
       "created_on": "2015-12-09T20:56:44Z",
       "updated_on": "2015-12-09T20:56:44Z",
-      "namespace_id": 41,
+      "namespace_id": "41",
       "updated_by": "system"
     }
   ]
