--- a/api/reference/automate_domains.adoc
+++ b/api/reference/automate_domains.adoc
@@ -98,7 +98,7 @@ as follows:
 {
   "success": true,
   "message": "Refreshing Automate Domain id:2347 name:'SampleDomain' from git repository",
-  "task_id": 61,
+  "task_id": "61",
   "task_href": "http://localhost:3000/api/tasks/61",
   "href": "http://localhost:3000/api/automate_domains/SampleDomain"
 }
