--- a/api/reference/categories_tags.adoc
+++ b/api/reference/categories_tags.adoc
@@ -68,14 +68,14 @@ GET /api/categories/1
 ----
 {
   "href": "http://localhost:3000/api/categories/1",
-  "id": 1,
+  "id": "1",
   "description": "Location",
   "read_only": false,
   "syntax": "string",
   "single_value": true,
   "example_text": "The geographic location of the resource, such as New York, Chicago, or London.",
-  "tag_id": 4,
-  "parent_id": 0,
+  "tag_id": "4",
+  "parent_id": "0",
   "show": true,
   "default": true,
   "name": "location",
@@ -118,22 +118,22 @@ GET /api/categories/1/tags?expand=resources&attributes=name
   "resources": [
     {
       "href": "http://localhost:3000/api/categories/1/tags/8",
-      "id": 8,
+      "id": "8",
       "name": "/managed/location/paris"
     },
     {
       "href": "http://localhost:3000/api/categories/1/tags/7",
-      "id": 7,
+      "id": "7",
       "name": "/managed/location/london"
     },
     {
       "href": "http://localhost:3000/api/categories/1/tags/6",
-      "id": 6,
+      "id": "6",
       "name": "/managed/location/chicago"
     },
     {
       "href": "http://localhost:3000/api/categories/1/tags/5",
-      "id": 5,
+      "id": "5",
       "name": "/managed/location/ny"
     }
   ],
@@ -170,7 +170,7 @@ GET /api/tags/5?attributes=categorization
 ----
 {
   "href": "http://localhost:3000/api/tags/5",
-  "id": 5,
+  "id": "5",
   "name": "/managed/location/ny",
   "categorization": {
     "name": "ny",
@@ -222,13 +222,13 @@ or via the *create* action:
 {
   "results": [
     {
-      "id": 1430,
+      "id": "1430",
       "description": "Test Category",
       "read_only": false,
       "syntax": "string",
       "single_value": false,
-      "tag_id": 1439,
-      "parent_id": 0,
+      "tag_id": "1439",
+      "parent_id": "0",
       "show": true
     }
   ]
@@ -402,8 +402,8 @@ POST /api/categories/1430/tags
 {
   "action" : "delete",
   "resources" : [
-    { "id" : 1441 },
-    { "id" : 1442 }
+    { "id" : "1441" },
+    { "id" : "1442" }
   ]
 }
 ----
