--- a/api/reference/chargebacks_rates.adoc
+++ b/api/reference/chargebacks_rates.adoc
@@ -38,7 +38,7 @@ GET /api/chargebacks/1
 ----
 {
   "href": "http://localhost:3000/api/chargebacks/1",
-  "id": 1,
+  "id": "1",
   "guid": "b47a0ef0-4335-11df-aba8-001d09066d98",
   "description": "Default",
   "rate_type": "Compute",
@@ -73,7 +73,7 @@ GET /api/chargebacks/1/rates?expand=resources&attributes=description,metric,grou
   "resources": [
     {
       "href": "http://localhost:3000/api/chargebacks/1/rates/8",
-      "id": 8,
+      "id": "8",
       "description": "Fixed Compute Cost 2",
       "group": "fixed",
       "source": "compute_2",
@@ -81,7 +81,7 @@ GET /api/chargebacks/1/rates?expand=resources&attributes=description,metric,grou
     },
     {
       "href": "http://localhost:3000/api/chargebacks/1/rates/7",
-      "id": 7,
+      "id": "7",
       "description": "Fixed Compute Cost 1",
       "group": "fixed",
       "source": "compute_1",
@@ -89,7 +89,7 @@ GET /api/chargebacks/1/rates?expand=resources&attributes=description,metric,grou
     },
     {
       "href": "http://localhost:3000/api/chargebacks/1/rates/6",
-      "id": 6,
+      "id": "6",
       "description": "Used Disk I/O in KBps",
       "group": "disk_io",
       "metric": "disk_usage_rate_average",
@@ -98,7 +98,7 @@ GET /api/chargebacks/1/rates?expand=resources&attributes=description,metric,grou
     },
     {
       "href": "http://localhost:3000/api/chargebacks/1/rates/5",
-      "id": 5,
+      "id": "5",
       "description": "Used Network I/O in KBps",
       "group": "net_io",
       "metric": "net_usage_rate_average",
@@ -107,7 +107,7 @@ GET /api/chargebacks/1/rates?expand=resources&attributes=description,metric,grou
     },
     {
       "href": "http://localhost:3000/api/chargebacks/1/rates/4",
-      "id": 4,
+      "id": "4",
       "description": "Allocated Memory in MB",
       "group": "memory",
       "metric": "derived_memory_available",
@@ -116,7 +116,7 @@ GET /api/chargebacks/1/rates?expand=resources&attributes=description,metric,grou
     },
     {
       "href": "http://localhost:3000/api/chargebacks/1/rates/3",
-      "id": 3,
+      "id": "3",
       "description": "Used Memory in MB",
       "group": "memory",
       "metric": "derived_memory_used",
@@ -125,7 +125,7 @@ GET /api/chargebacks/1/rates?expand=resources&attributes=description,metric,grou
     },
     {
       "href": "http://localhost:3000/api/chargebacks/1/rates/2",
-      "id": 2,
+      "id": "2",
       "description": "Allocated CPU Count",
       "group": "cpu",
       "metric": "derived_vm_numvcpus",
@@ -134,7 +134,7 @@ GET /api/chargebacks/1/rates?expand=resources&attributes=description,metric,grou
     },
     {
       "href": "http://localhost:3000/api/chargebacks/1/rates/1",
-      "id": 1,
+      "id": "1",
       "description": "Used CPU in MHz",
       "group": "cpu",
       "metric": "cpu_usagemhz_rate_average",
@@ -163,7 +163,7 @@ POST /api/rates
 ----
 {
   "per_time" : "daily",
-  "chargeback_rate_id" : 1,
+  "chargeback_rate_id" : "1",
   "description": "My CPU allocation rate",
   "group" : "cpu",
   "per_unit" : "megahertz",
@@ -178,7 +178,7 @@ POST /api/rates
 {
   "results": [
     {
-      "id": 16,
+      "id": "16",
       "enabled": true,
       "description": "My CPU allocation rate",
       "group": "cpu",
@@ -186,7 +186,7 @@ POST /api/rates
       "per_time": "daily",
       "per_unit": "megahertz",
       "friendly_rate": "",
-      "chargeback_rate_id": 1,
+      "chargeback_rate_id": "1",
       "created_on": "2016-08-16T08:27:22Z",
       "updated_on": "2016-08-16T08:27:22Z"
     }
@@ -225,7 +225,7 @@ POST /api/rates/16
 ----
 {
   "href": "http://localhost:3000/api/rates/16",
-  "id": 16,
+  "id": "16",
   "enabled": true,
   "description": "Allocated NICs",
   "group": "net_io",
