--- a/api/reference/groups.adoc
+++ b/api/reference/groups.adoc
@@ -46,7 +46,7 @@ POST /api/groups
 ----
 {
   "description" : "sample_group",
-  "role" : { "id" : 2 },
+  "role" : { "id" : "2" },
   "tenant" : { "href" : "http://localhost:3000/api/tenants/1" },
   "filters" : {
     "belongsto" : [ "/managed/area/1", "/managed/area/2" ],
