--- a/api/reference/hosts.adoc
+++ b/api/reference/hosts.adoc
@@ -78,9 +78,9 @@ POST /api/hosts
 {
   "action" : "edit",
   "resources" : [
-    { "id" : 101, "credentials" : { "password" : "updated_password" } },
-    { "id" : 102, "credentials" : { "password" : "updated_password" } },
-    { "id" : 103, "credentials" : { "password" : "updated_password" } },
+    { "id" : "101", "credentials" : { "password" : "updated_password" } },
+    { "id" : "102", "credentials" : { "password" : "updated_password" } },
+    { "id" : "103", "credentials" : { "password" : "updated_password" } },
     ...
   ]
 }
