--- a/api/reference/notifications.adoc
+++ b/api/reference/notifications.adoc
@@ -71,8 +71,8 @@ GET /api/notifications?expand=resources&attributes=details
   "resources": [
     {
       "href": "http://localhost:3000/api/notifications/44",
-      "id": 44,
-      "user_id": 1,
+      "id": "44",
+      "user_id": "1",
       "seen": false,
       "details": {
         "level": "info",
@@ -81,7 +81,7 @@ GET /api/notifications?expand=resources&attributes=details
         "bindings": {
           "initiator": {
             "link": {
-              "id": 1,
+              "id": "1",
               "model": "User"
             },
             "text": "Administrator"
@@ -109,9 +109,9 @@ GET /api/notifications?expand=resources&attributes=details
     },
     {
       "href": "http://localhost:3000/api/notifications/45",
-      "id": 45,
-      "notification_id": 22,
-      "user_id": 1,
+      "id": "45",
+      "notification_id": "22",
+      "user_id": "1",
       "seen": true,
       "details": {
         "level": "info",
@@ -120,7 +120,7 @@ GET /api/notifications?expand=resources&attributes=details
         "bindings": {
           "initiator": {
             "link": {
-              "id": 1,
+              "id": "1",
               "model": "User"
             },
             "text": "Administrator"
@@ -148,9 +148,9 @@ GET /api/notifications?expand=resources&attributes=details
     },
     {
       "href": "http://localhost:3000/api/notifications/46",
-      "id": 46,
-      "notification_id": 23,
-      "user_id": 1,
+      "id": "46",
+      "notification_id": "23",
+      "user_id": "1",
       "seen": false,
       "details": {
         "level": "info",
@@ -159,7 +159,7 @@ GET /api/notifications?expand=resources&attributes=details
         "bindings": {
           "initiator": {
             "link": {
-              "id": 1,
+              "id": "1",
               "model": "User"
             },
             "text": "Administrator"
