--- a/api/reference/pictures.adoc
+++ b/api/reference/pictures.adoc
@@ -52,18 +52,18 @@ GET /api/pictures?expand=resources
   "resources": [
     {
       "href": "http://localhost:3000/api/pictures/1",
-      "id": 1
+      "id": "1"
     },
     ...
     {
       "href": "http://localhost:3000/api/pictures/4",
-      "id": 4,
-      "resource_id": 1,
+      "id": "4",
+      "resource_id": "1",
       "resource_type": "ServiceTemplate"
     },
     {
       "href": "http://localhost:3000/api/pictures/5",
-      "id": 5
+      "id": "5"
     }
   ],
   "actions": [
@@ -89,13 +89,13 @@ GET /api/pictures/4?attributes=binary_blob
 ----
 {
   "href": "http://localhost:3000/api/pictures/4",
-  "id": 4,
-  "resource_id": 1,
+  "id": "4",
+  "resource_id": "1",
   "resource_type": "ServiceTemplate",
   "binary_blob": {
-    "id": 4,
+    "id": "4",
     "resource_type": "Picture",
-    "resource_id": 4,
+    "resource_id": "4",
     "md5": "0a38d1998325099141d4c68552440b1d",
     "size": 68314,
     "part_size": 1048576,
@@ -117,13 +117,13 @@ GET /api/pictures/4?attributes=binary_blob,image_href
 ----
 {
   "href": "http://localhost:3000/api/pictures/4",
-  "id": 4,
-  "resource_id": 1,
+  "id": "4",
+  "resource_id": "1",
   "resource_type": "ServiceTemplate",
   "binary_blob": {
-    "id": 4,
+    "id": "4",
     "resource_type": "Picture",
-    "resource_id": 4,
+    "resource_id": "4",
     "md5": "0a38d1998325099141d4c68552440b1d",
     "size": 68314,
     "part_size": 1048576,
