--- a/api/reference/policies.adoc
+++ b/api/reference/policies.adoc
@@ -93,7 +93,7 @@ GET /api/policies?expand=resources
   "resources": [
     {
       "href": "http://localhost:3000/api/policies/7",
-      "id": 7,
+      "id": "7",
       "name": "b1fd23bc-acc4-11e4-abc7-b8e85646e742",
       "description": "test_control_policy",
       "created_on": "2015-02-04T23:22:32Z",
@@ -107,7 +107,7 @@ GET /api/policies?expand=resources
     },
     {
       "href": "http://localhost:3000/api/policies/8",
-      "id": 8,
+      "id": "8",
       "name": "68bfaade-ad3d-11e4-8d4e-b8e85646e742",
       "description": "server_type_control_policy",
       "created_on": "2015-02-05T13:46:39Z",
@@ -140,7 +140,7 @@ This will provide the resources as well as the related policies
 ----
 {
   "href": "http://localhost:3000/api/vms/320",
-  "id": 320,
+  "id": "320",
   "vendor": "vmware",
   "name": "aab-vm1",
   "description": "this is a test",
@@ -149,7 +149,7 @@ This will provide the resources as well as the related policies
   "policies": [
     {
       "href": "http://localhost:3000/api/vms/320/policies/7",
-      "id": 7,
+      "id": "7",
       "name": "b1fd23bc-acc4-11e4-abc7-b8e85646e742",
       "description": "test_control_policy",
       "created_on": "2015-02-04T23:22:32Z",
@@ -438,7 +438,7 @@ or multiple policies:
       "success": true,
       "message": "Assigning Policy: id:'7' description:'test_control_policy' guid:'b1fd23bc-acc4-11e4-abc7-b8e85646e742'",
       "href": "http://localhost:3000/api/vms/320",
-      "policy_id": 7,
+      "policy_id": "7",
       "policy_href": "http://localhost:3000/api/policies/7"
     }
   ]
@@ -473,7 +473,7 @@ POST /api/vms/320/policies
       "success": true,
       "message": "Unassigning Policy: id:'7' description:'test_control_policy' guid:'b1fd23bc-acc4-11e4-abc7-b8e85646e742'",
       "href": "http://localhost:3000/api/vms/320",
-      "policy_id": 7,
+      "policy_id": "7",
       "policy_href": "http://localhost:3000/api/policies/7"
     }
   ]
@@ -507,7 +507,7 @@ POST /api/vms/320/policies/7
       "message": "Resolving Policy: id:'7' description:'test_control_policy' guid:'b1fd23bc-acc4-11e4-abc7-b8e85646e742'",
       "result": [
         {
-          "id": 7,
+          "id": "7",
           "name": "b1fd23bc-acc4-11e4-abc7-b8e85646e742",
           "description": "test_control_policy",
           "created_on": "2015-02-04T23:22:32Z",
@@ -528,7 +528,7 @@ POST /api/vms/320/policies/7
         }
       ],
       "href": "http://localhost:3000/api/vms/320",
-      "policy_id": 7,
+      "policy_id": "7",
       "policy_href": "http://localhost:3000/api/policies/7"
     }
   ]
@@ -560,7 +560,7 @@ POST /api/vms/320/policy_profiles/34
   "message": "Resolving Policy Profile: id:'34' description:'Control Policies' guid:'f39b25e2-ad3e-11e4-8d4e-b8e85646e742'",
   "result": [
     {
-      "id": 34,
+      "id": "34",
       "name": "f39b25e2-ad3e-11e4-8d4e-b8e85646e742",
       "description": "Control Policies",
       "set_type": "MiqPolicySet",
@@ -571,7 +571,7 @@ POST /api/vms/320/policy_profiles/34
       "result": "allow",
       "policies": [
         {
-          "id": 7,
+          "id": "7",
           "name": "b1fd23bc-acc4-11e4-abc7-b8e85646e742",
           "description": "test_control_policy",
           "created_on": "2015-02-04T23:22:32Z",
@@ -591,7 +591,7 @@ POST /api/vms/320/policy_profiles/34
           ]
         },
         {
-          "id": 8,
+          "id": "8",
           "name": "68bfaade-ad3d-11e4-8d4e-b8e85646e742",
           "description": "second_test_control_policy",
           "created_on": "2015-02-05T13:46:39Z",
@@ -614,7 +614,7 @@ POST /api/vms/320/policy_profiles/34
     }
   ],
   "href": "http://localhost:3000/api/vms/320",
-  "policy_profile_id": 34,
+  "policy_profile_id": "34",
   "policy_profile_href": "http://localhost:3000/api/policy_profiles/34"
 }
 ----
