--- a/api/reference/provision_requests.adoc
+++ b/api/reference/provision_requests.adoc
@@ -109,13 +109,13 @@ POST /api/provision_requests/11
 ----
 {
   "href": "http://localhost:3000/api/provision_requests/11",
-  "id": 3068,
+  "id": "3068",
   "description": "Provision from [template1] to [###]",
   "approval_state": "pending_approval",
   "type": "MiqProvisionRequest",
   "created_on": "2015-04-14T17:36:30Z",
   "updated_on": "2015-04-14T18:32:30Z",
-  "requester_id": 88913,
+  "requester_id": "88913",
   "requester_name": "API User",
   "request_type": "template",
   "request_state": "pending",
@@ -149,7 +149,7 @@ POST /api/provision_requests/11
     "tags": {
     }
     "userid": "admin",
-    "source_id": 109996,
+    "source_id": "109996",
     "source_type": "VmOrTemplate",
     "custom_var1" : "custom value1"
   }
@@ -208,13 +208,13 @@ provision request itself, i.e. */api/provision_requests/:id*
 {
   "results": [
     {
-      "id": 3068,
+      "id": "3068",
       "description": "Provision from [template1] to [###]",
       "approval_state": "pending_approval",
       "type": "MiqProvisionRequest",
       "created_on": "2015-04-14T17:36:30Z",
       "updated_on": "2015-04-14T17:36:30Z",
-      "requester_id": 88913,
+      "requester_id": "88913",
       "requester_name": "API User",
       "request_type": "template",
       "request_state": "pending",
@@ -249,7 +249,7 @@ provision request itself, i.e. */api/provision_requests/:id*
         }
       },
       "userid": "admin",
-      "source_id": 109996,
+      "source_id": "109996",
       "source_type": "VmOrTemplate"
     }
   ]
