--- a/api/reference/reports.adoc
+++ b/api/reference/reports.adoc
@@ -87,7 +87,7 @@ Example for running a report on the following:
 ----
 {
   "href": "http://localhost:3000/api/reports/80",
-  "id": 80,
+  "id": "80",
   "name": "VM Relationships" 
 }
 ----
@@ -114,9 +114,9 @@ POST /api/reports/80
   "success": true,
   "message": "running report 80",
   "href": "http://localhost:3000/api/reports/80",
-  "result_id": 27,
+  "result_id": "27",
   "result_href": "http://localhost:3000/api/results/27",
-  "task_id": 726,
+  "task_id": "726",
   "task_href": "http://localhost:3000/api/tasks/726"
 }
 ----
@@ -133,7 +133,7 @@ GET /api/tasks/726
 ----
 {
   "href": "http://localhost:3000/api/tasks/726",
-  "id": 726,
+  "id": "726",
   "name": "Generate Report: 'VM Relationships'",
   "state": "Queued",
   "status": "Ok",
@@ -148,7 +148,7 @@ GET /api/tasks/726
 ----
 {
   "href": "http://localhost:3000/api/tasks/726",
-  "id": 726,
+  "id": "726",
   "name": "Generate Report: 'VM Relationships'",
   "state": "Finished",
   "status": "Ok",
@@ -170,10 +170,10 @@ GET /api/results/27
 ----
 {
   "href": "http://localhost:3000/api/results/27",
-  "id": 27,
+  "id": "27",
   "name": "VM Relationships",
-  "miq_report_id": 80,
-  "miq_task_id": 726,
+  "miq_report_id": "80",
+  "miq_task_id": "726",
   "userid": "system",
   "report_source": "Requested by user",
   "db": "Vm",
@@ -288,7 +288,7 @@ GET /api/results/27
       "host.v_owning_cluster": "",
       "host.hostname": "test-host.testdomain.com",
       "storage.name": "StarStorage1"
-      "id": 320
+      "id": "320"
     },
     {
       "name": "aab_demo_vm",
@@ -298,7 +298,7 @@ GET /api/results/27
       "host.v_owning_cluster": "",
       "host.hostname": "test-host2.testdomain.com",
       "storage.name": "StarStorage2",
-      "id": 1
+      "id": "1"
     },
     ...
   ]
@@ -321,12 +321,12 @@ GET /api/reports/80/results?expand=resources&attributes=created_on
   "resources": [
     {
       "href": "http://localhost:3000/api/reports/80/results/27",
-      "id": 27,
+      "id": "27",
       "created_on": "2015-11-09T18:52:48Z"
     },
     {
       "href": "http://localhost:3000/api/reports/80/results/13",
-      "id": 13,
+      "id": "13",
       "created_on": "2015-07-29T18:24:35Z"
     }
   ]
@@ -394,7 +394,7 @@ POST /api/reports
       "success": true,
       "message": "Imported Report: [Test Report]",
       "result": {
-        "id": 199,
+        "id": "199",
         "name": "Test Report",
         "title": "Test Report",
         "rpt_group": "Custom",
@@ -412,8 +412,8 @@ POST /api/reports
         ],
         "created_on": "2015-11-09T19:44:37Z",
         "updated_on": "2015-11-09T19:44:37Z",
-        "miq_group_id": 1,
-        "user_id": 1
+        "miq_group_id": "1",
+        "user_id": "1"
       }
     }
   ]
