--- a/api/reference/requests.adoc
+++ b/api/reference/requests.adoc
@@ -45,7 +45,7 @@ POST /api/requests
 {
   "options" : {
     "request_type" : "service_reconfigure",
-    "src_id" : 4,
+    "src_id" : "4",
     "service_param1" : "updated_value1",
     "service_param2" : "updated_value2"
   },
@@ -63,13 +63,13 @@ Response:
 {
   "results": [
     {
-      "id": 97,
+      "id": "97",
       "description": "Service Reconfigure for: svc4",
       "approval_state": "pending_approval",
       "type": "ServiceReconfigureRequest",
       "created_on": "2016-11-10T21:39:08Z",
       "updated_on": "2016-11-10T21:39:08Z",
-      "requester_id": 1,
+      "requester_id": "1",
       "requester_name": "Administrator",
       "request_type": "service_reconfigure",
       "request_state": "pending",
@@ -77,14 +77,14 @@ Response:
       "status": "Ok",
       "options": {
         "request_type": "service_reconfigure",
-        "src_id": 4,
+        "src_id": "4",
         "service_param1": "updated_value1",
         "service_param2": "updated_value2"
       },
       "userid": "admin",
-      "source_id": 4,
+      "source_id": "4",
       "source_type": "Service",
-      "tenant_id": 1,
+      "tenant_id": "1",
       "process": true
     }
   ]
@@ -146,10 +146,10 @@ Response:
 ----
 {
   "href": "http://localhost:3000/api/requests/97",
-  "id": 97,
+  "id": "97",
   "options": {
     "request_type": "service_reconfigure",
-    "src_id": 4,
+    "src_id": "4",
     "service_param1": "new_updated_value1",
     "service_param2": "new_updated_value2"
   },
@@ -158,16 +158,16 @@ Response:
   "type": "ServiceReconfigureRequest",
   "created_on": "2016-11-10T21:39:08Z",
   "updated_on": "2016-11-10T22:11:03Z",
-  "requester_id": 1,
+  "requester_id": "1",
   "requester_name": "Administrator",
   "request_type": "service_reconfigure",
   "request_state": "pending",
   "message": "Service Reconfigure - Request Created",
   "status": "Ok",
   "userid": "admin",
-  "source_id": 4,
+  "source_id": "4",
   "source_type": "Service",
-  "tenant_id": 1,
+  "tenant_id": "1",
   "process": true
 }
 ----
