--- a/api/reference/service_custom_actions.adoc
+++ b/api/reference/service_custom_actions.adoc
@@ -35,7 +35,7 @@ GET /api/service_templates/7?attributes=custom_actions,custom_action_buttons
 ----
 {
   "href": "http://localhost:3000/api/service_templates/7",
-  "id": 7,
+  "id": "7",
   "name": "SampleServiceCatalogItem2",
   "description": "Sample Service Catalog Item 2",
   "guid": "47edc73a-4cef-11e5-8525-000a27020067",
@@ -50,16 +50,16 @@ GET /api/service_templates/7?attributes=custom_actions,custom_action_buttons
   "created_at": "2015-08-27T19:10:29Z",
   "updated_at": "2015-09-16T18:24:13Z",
   "display": true,
-  "evm_owner_id": 1,
+  "evm_owner_id": "1",
   "service_type": "atomic",
   "prov_type": "generic",
-  "service_template_catalog_id": 7,
+  "service_template_catalog_id": "7",
   "long_description": "",
-  "tenant_id": 1,
+  "tenant_id": "1",
   "custom_actions": {
     "buttons": [
       {
-        "id": 1,
+        "id": "1",
         "guid": "3d5975fe-57bb-11e5-8d22-000a27020067",
         "description": "Rescan Service Offering",
         "applies_to_class": "ServiceTemplate",
@@ -76,10 +76,10 @@ GET /api/service_templates/7?attributes=custom_actions,custom_action_buttons
             "_ALL_"
           ]
         },
-        "applies_to_id": 7,
+        "applies_to_id": "7",
         "resource_action": {
-          "id": 7,
-          "resource_id": 1,
+          "id": "7",
+          "resource_id": "1",
           "resource_type": "CustomButton",
           "created_at": "2015-09-10T12:55:40Z",
           "updated_at": "2015-09-16T14:28:17Z",
@@ -94,7 +94,7 @@ GET /api/service_templates/7?attributes=custom_actions,custom_action_buttons
         }
       },
       {
-        "id": 2,
+        "id": "2",
         "guid": "7c900d18-57c1-11e5-8d22-000a27020067",
         "description": "Ping Service Status",
         "applies_to_class": "ServiceTemplate",
@@ -111,10 +111,10 @@ GET /api/service_templates/7?attributes=custom_actions,custom_action_buttons
             "_ALL_"
           ]
         },
-        "applies_to_id": 7,
+        "applies_to_id": "7",
         "resource_action": {
-          "id": 8,
-          "resource_id": 2,
+          "id": "8",
+          "resource_id": "2",
           "resource_type": "CustomButton",
           "created_at": "2015-09-10T13:40:23Z",
           "updated_at": "2015-09-16T14:16:21Z",
@@ -131,7 +131,7 @@ GET /api/service_templates/7?attributes=custom_actions,custom_action_buttons
     ],
     "button_groups": [
       {
-        "id": 43,
+        "id": "43",
         "name": "MyButtonGroup|ServiceTemplate|7",
         "description": "My Custom Buttons",
         "created_on": "2015-09-10T13:41:20Z",
@@ -144,14 +144,14 @@ GET /api/service_templates/7?attributes=custom_actions,custom_action_buttons
           "button_image": 1,
           "display": true,
           "applies_to_class": "ServiceTemplate",
-          "applies_to_id": 7,
+          "applies_to_id": "7",
           "group_index": 1
         },
         "owner_type": "ServiceTemplate",
-        "owner_id": 7,
+        "owner_id": "7",
         "buttons": [
           {
-            "id": 3,
+            "id": "3",
             "guid": "92ac7d88-5bb9-11e5-b2f7-000a27020067",
             "description": "Simulate Button Dialog",
             "applies_to_class": "ServiceTemplate",
@@ -168,11 +168,11 @@ GET /api/service_templates/7?attributes=custom_actions,custom_action_buttons
                 "_ALL_"
               ]
             },
-            "applies_to_id": 7,
+            "applies_to_id": "7",
             "resource_action": {
-              "id": 12,
-              "dialog_id": 2,
-              "resource_id": 3,
+              "id": "12",
+              "dialog_id": "2",
+              "resource_id": "3",
               "resource_type": "CustomButton",
               "created_at": "2015-09-15T14:53:49Z",
               "updated_at": "2015-09-16T14:28:50Z",
@@ -237,7 +237,7 @@ GET /api/service_templates/7?attributes=custom_actions,custom_action_buttons
   },
   "custom_action_buttons": [
     {
-      "id": 1,
+      "id": "1",
       "guid": "3d5975fe-57bb-11e5-8d22-000a27020067",
       "description": "Rescan Service Offering",
       "applies_to_class": "ServiceTemplate",
@@ -254,10 +254,10 @@ GET /api/service_templates/7?attributes=custom_actions,custom_action_buttons
           "_ALL_"
         ]
       },
-      "applies_to_id": 7
+      "applies_to_id": "7"
     },
     {
-      "id": 2,
+      "id": "2",
       "guid": "7c900d18-57c1-11e5-8d22-000a27020067",
       "description": "Ping Service Status",
       "applies_to_class": "ServiceTemplate",
@@ -274,10 +274,10 @@ GET /api/service_templates/7?attributes=custom_actions,custom_action_buttons
           "_ALL_"
         ]
       },
-      "applies_to_id": 7
+      "applies_to_id": "7"
     },
     {
-      "id": 3,
+      "id": "3",
       "guid": "b9afcdfa-57c1-11e5-8d22-000a27020067",
       "description": "Simulate Button Dialog",
       "applies_to_class": "ServiceTemplate",
@@ -294,7 +294,7 @@ GET /api/service_templates/7?attributes=custom_actions,custom_action_buttons
           "_ALL_"
         ]
       },
-      "applies_to_id": 7
+      "applies_to_id": "7"
     }
   }
   "actions": [
@@ -324,7 +324,7 @@ As an example, here's a service without custom buttons:
 ----
 {
   "href": "http://localhost:3000/api/services/91",
-  "id": 91,
+  "id": "91",
   "name": "new_service_91",
   "description": "This is a description for the new service 91",
   ...
@@ -354,11 +354,11 @@ Here is an example of a service with custom buttons:
 ----
 {
   "href": "http://localhost:3000/api/services/92",
-  "id": 92,
+  "id": "92",
   "name": "enhanced_service_92",
   "description": "This is a description for the enhanced service 92",
   "guid": "24c193a2-57c8-11e5-9332-000a27020067",
-  "service_template_id": 7,
+  "service_template_id": "7",
   "options": {
     "button_order": [
       "cb-1",
@@ -372,8 +372,8 @@ Here is an example of a service with custom buttons:
   "display": true,
   "created_at": "2015-09-10T14:28:02Z",
   "updated_at": "2015-09-10T14:28:02Z",
-  "evm_owner_id": 1,
-  "miq_group_id": 1,
+  "evm_owner_id": "1",
+  "miq_group_id": "1",
   "actions": [
     {
       "name": "edit",
