--- a/api/reference/services.adoc
+++ b/api/reference/services.adoc
@@ -288,11 +288,11 @@ Service Templates can be created via a POST to the /api/service_templates collec
     "src_ems_id"              : [5, "test_provider"],
     "provision"               : {
       "fqname"    : "/Sample/System/ProvisionEndpoint",
-      "dialog_id" : 21
+      "dialog_id" : "21"
     },
     "retirement"              : {
       "fqname"    : "/Sample/System/RetirementEndpoint",
-      "dialog_id" : 22
+      "dialog_id" : "22"
     }
   }
 }
@@ -450,7 +450,7 @@ Response:
 {
   "success": true,
   "message": "Service id:12 name:'SampleService' starting",
-  "task_id": 62,
+  "task_id": "62",
   "task_href": "http://localhost:3000/api/tasks/62",
   "href": "http://localhost:3000/api/services/12"
 }
@@ -863,7 +863,7 @@ POST /api/service_requests
   "resources" : [
     {
       "href" : "http://localhost:3000/api/service_requests/101",
-      "user_id" : 11
+      "user_id" : "11"
     },
     {
       "href" : "http://localhost:3000/api/service_requests/102",
@@ -894,7 +894,7 @@ POST /api/service_requests/:id
 {
   "action" : "remove_approver",
   "resource" : {
-    "user_id" : 11 
+    "user_id" : "11"
   }
 }
 ----
@@ -914,11 +914,11 @@ POST /api/service_requests
   "resources" : [
     {
       "href" : "http://localhost:3000/api/service_requests/101",
-      "user_id" : 11
+      "user_id" : "11"
     },
     {
       "href" : "http://localhost:3000/api/service_requests/102",
-      "user" : { "id" : 11 }
+      "user" : { "id" : "11" }
     },
     {
       "href" : "http://localhost:3000/api/service_requests/103",
