--- a/api/reference/users.adoc
+++ b/api/reference/users.adoc
@@ -48,7 +48,7 @@ POST /api/users
   "userid" : "testuser",
   "password" : "secret",
   "name" : "Test User",
-  "group" : { "id" : 11 }
+  "group" : { "id" : "11" }
 }
 ----
 
@@ -89,7 +89,7 @@ POST /api/users/:id
 {
   "action" : "edit",
   "resource" : {
-    "group" : { "id" : 12 }
+    "group" : { "id" : "12" }
   }
 }
 ----
