--- a/api/examples/assign_service_templates.adoc
+++ b/api/examples/assign_service_templates.adoc
@@ -28,14 +28,14 @@ POST /api/service_catalogs/6/service_templates
     {
       "success": true,
       "message": "Assigning Service Template id:5 name:'template5'",
-      "service_template_id": 5,
+      "service_template_id": "5",
       "service_template_href": "http://localhost:3000/api/service_templates/5",
       "href": "http://localhost:3000/api/service_catalogs/6"
     },
     {
       "success": false,
       "message": "Service Template 1 is currently assigned to Service Catalog 3",
-      "service_template_id": 1,
+      "service_template_id": "1",
       "service_template_href": "http://localhost:3000/api/service_templates/1",
       "href": "http://localhost:3000/api/service_catalogs/6"
     }
