--- a/api/examples/automation_requests.adoc
+++ b/api/examples/automation_requests.adoc
@@ -98,13 +98,14 @@ POST /api/automation_requests
 {
   "results": [
     {
-      "id": 14,
+      "id": "14",
+      "href" : "http://localhost:3000/api/automation_requests/14",
       "description": "Automation Task",
       "approval_state": "approved",
       "type": "AutomationRequest",
       "created_on": "2015-04-16T21:59:42Z",
       "updated_on": "2015-04-16T21:59:42Z",
-      "requester_id": 13,
+      "requester_id": "13",
       "requester_name": "aab",
       "request_type": "automation",
       "request_state": "pending",
@@ -114,7 +115,7 @@ POST /api/automation_requests
         "namespace": "System",
         "class_name": "Request",
         "instance_name": "InspectME",
-        "user_id": 13,
+        "user_id": "13",
         "attrs": {
           "vm_name": "test_1",
           "var2": "yyyyy",
@@ -127,13 +128,14 @@ POST /api/automation_requests
       "userid": "aab"
     },
     {
-      "id": 15,
+      "id": "15",
+      "href" : "http://localhost:3000/api/automation_requests/15",
       "description": "Automation Task",
       "approval_state": "approved",
       "type": "AutomationRequest",
       "created_on": "2015-04-16T21:59:42Z",
       "updated_on": "2015-04-16T21:59:42Z",
-      "requester_id": 1,
+      "requester_id": "1",
       "requester_name": "Administrator",
       "request_type": "automation",
       "request_state": "pending",
@@ -143,7 +145,7 @@ POST /api/automation_requests
         "namespace": "System",
         "class_name": "Request",
         "instance_name": "InspectME",
-        "user_id": 1,
+        "user_id": "1",
         "attrs": {
           "vm_name": "test_2",
           "vm_memory": 1024,
@@ -154,13 +156,14 @@ POST /api/automation_requests
       "userid": "admin"
     },
     {
-      "id": 16,
+      "id": "16",
+      "href" : "http://localhost:3000/api/automation_requests/16",
       "description": "Automation Task",
       "approval_state": "approved",
       "type": "AutomationRequest",
       "created_on": "2015-04-16T21:59:42Z",
       "updated_on": "2015-04-16T21:59:42Z",
-      "requester_id": 1,
+      "requester_id": "1",
       "requester_name": "Administrator",
       "request_type": "automation",
       "request_state": "pending",
@@ -170,7 +173,7 @@ POST /api/automation_requests
         "namespace": "System",
         "class_name": "Request",
         "instance_name": "InspectME",
-        "user_id": 1,
+        "user_id": "1",
         "attrs": {
           "vm_name": "test_3",
           "vm_memory": 2048,
@@ -181,13 +184,14 @@ POST /api/automation_requests
       "userid": "admin"
     },
     {
-      "id": 17,
+      "id": "17",
+      "href" : "http://localhost:3000/api/automation_requests/17",
       "description": "Automation Task",
       "approval_state": "approved",
       "type": "AutomationRequest",
       "created_on": "2015-04-16T21:59:42Z",
       "updated_on": "2015-04-16T21:59:42Z",
-      "requester_id": 1,
+      "requester_id": "1",
       "requester_name": "Administrator",
       "request_type": "automation",
       "request_state": "pending",
@@ -197,7 +201,7 @@ POST /api/automation_requests
         "namespace": "System",
         "class_name": "Request",
         "instance_name": "InspectME",
-        "user_id": 1,
+        "user_id": "1",
         "attrs": {
           "vm_name": "test_4",
           "vm_memory": 4096,
