--- a/api/examples/create_provider.adoc
+++ b/api/examples/create_provider.adoc
@@ -29,14 +29,15 @@ POST /api/providers
 {
   "results": [
     {
-      "id": 105,
+      "id": "105",
+      "href" : "http://localhost:3000/api/providers/105",
       "name": "rhevm101",
       "hostname": "rhevm101",
       "ipaddress": "100.200.300.101",
       "created_on": "2015-05-05T15:47:41Z",
       "updated_on": "2015-05-05T15:47:41Z",
       "guid": "10360312-f33e-11e4-86c7-b8e85646e742",
-      "zone_id": 1,
+      "zone_id": "1",
       "type": "ManageIQ::Providers::Redhat::InfraManager"
     }
   ]
