--- a/api/examples/create_provider_compound_credentials.adoc
+++ b/api/examples/create_provider_compound_credentials.adoc
@@ -36,14 +36,15 @@ POST /api/providers
 {
   "results": [
     {
-      "id": 106,
+      "id": "106",
+      "href" : "http://localhost:3000/api/providers/106",
       "name": "rhevm102",
       "hostname": "rhevm102",
       "ipaddress": "100.200.300.102",
       "created_on": "2015-05-05T15:57:44Z",
       "updated_on": "2015-05-05T15:57:44Z",
       "guid": "acbd610e-f3f6-11e4-aaba-b8e85646e742",
-      "zone_id": 1,
+      "zone_id": "1",
       "type": "ManageIQ::Providers::Redhat::InfraManager"
     }
   ]
