--- a/api/examples/delete_provider.adoc
+++ b/api/examples/delete_provider.adoc
@@ -30,7 +30,7 @@ POST /api/provider/105
 {
   "success": true,
   "message": "Provider id:106 name:'rhevm102' deleting",
-  "task_id": 625,
+  "task_id": "625",
   "task_href": "http://localhost:3000/api/tasks/625",
   "href": "http://localhost:3000/api/providers/106"
 }
@@ -51,7 +51,7 @@ GET /api/tasks/625
 ----
 {
   "href": "http://localhost:3000/api/tasks/625",
-  "id": 625,
+  "id": "625",
   "name": "Provider id:106 name:'rhevm102' deleting",
   "state": "Finished",
   "status": "Ok",
@@ -90,14 +90,14 @@ POST /api/providers
     {
       "success": true,
       "message": "Provider id:107 name:'rhevm102' deleting",
-      "task_id": 626,
+      "task_id": "626",
       "task_href": "http://localhost:3000/api/tasks/626",
       "href": "http://localhost:3000/api/providers/107"
     },
     {
       "success": true,
       "message": "Provider id:108 name:'rhevm103' deleting",
-      "task_id": 627,
+      "task_id": "627",
       "task_href": "http://localhost:3000/api/tasks/627",
       "href": "http://localhost:3000/api/providers/108"
     }
