--- a/api/examples/edit_service_templates.adoc
+++ b/api/examples/edit_service_templates.adoc
@@ -32,7 +32,7 @@ POST /api/service_templates
 {
   "results": [
     {
-      "id": 1,
+      "id": "1",
       "name": "template1",
       "description": "This is an updated description for the first sample service template",
       "guid": "6a6fdf7e-d6e7-11e4-9837-b8e85646e742",
@@ -41,10 +41,10 @@ POST /api/service_templates
       "created_at": "2015-03-30T14:16:53Z",
       "updated_at": "2015-04-16T22:33:09Z",
       "service_type": "unknown",
-      "service_template_catalog_id": 3
+      "service_template_catalog_id": "3"
     },
     {
-      "id": 2,
+      "id": "2",
       "name": "updated_svc_template_02",
       "description": "This is an updated description for the second sample service template",
       "guid": "6f7918b4-d6e7-11e4-9837-b8e85646e742",
@@ -53,7 +53,7 @@ POST /api/service_templates
       "created_at": "2015-03-30T14:17:02Z",
       "updated_at": "2015-04-16T22:33:09Z",
       "service_type": "unknown",
-      "service_template_catalog_id": 6
+      "service_template_catalog_id": "6"
     }
   ]
 }
