--- a/api/examples/reconfigure_service.adoc
+++ b/api/examples/reconfigure_service.adoc
@@ -27,13 +27,13 @@ POST /api/services/2
   "success": true,
   "message": "Service id:2 name:'SampleStaticServiceCatalogItem' reconfiguring",
   "result": {
-    "id": 74,
+    "id": "74",
     "description": "Service Reconfigure for: SampleStaticServiceCatalogItem",
     "approval_state": "pending_approval",
     "type": "ServiceReconfigureRequest",
     "created_on": "2016-06-10T20:34:13Z",
     "updated_on": "2016-06-10T20:34:13Z",
-    "requester_id": 1,
+    "requester_id": "1",
     "requester_name": "Administrator",
     "request_type": "service_reconfigure",
     "request_state": "pending",
@@ -48,17 +48,17 @@ POST /api/services/2
         "dialog_vm_host_name": ""
       },
       "workflow_settings": {
-        "resource_action_id": 23,
-        "dialog_id": 3
+        "resource_action_id": "23",
+        "dialog_id": "3"
       },
-      "src_id": 2,
+      "src_id": "2",
       "requester_group": "EvmGroup-super_administrator"
     },
     "userid": "admin",
-    "source_id": 2,
+    "source_id": "2",
     "source_type": "Service",
-    "tenant_id": 1,
-    "service_order_id": 9,
+    "tenant_id": "1",
+    "service_order_id": "9",
     "process": true
   },
   "href": "http://localhost:3000/api/services/2"
