--- a/api/examples/update_provider.adoc
+++ b/api/examples/update_provider.adoc
@@ -29,14 +29,14 @@ POST /api/providers/106
 ----
 {
   "href": "http://localhost:3000/api/providers/106",
-  "id": 106,
+  "id": "106",
   "name": "rhevm102",
   "hostname": "rhevm102",
   "ipaddress": "100.200.300.112",
   "created_on": "2015-05-06T13:49:11Z",
   "updated_on": "2015-05-06T13:53:06Z",
   "guid": "acbd610e-f3f6-11e4-aaba-b8e85646e742",
-  "zone_id": 1,
+  "zone_id": "1",
   "type": "ManageIQ::Providers::Redhat::InfraManager"
 }
 ----
