--- a/api/reference/automation_requests.adoc
+++ b/api/reference/automation_requests.adoc
@@ -74,7 +74,7 @@ Response:
 ----
 {
   "href": "http://localhost:3000/api/automation_requests/11",
-  "id": 11,
+  "id": "11",
   "options": {
     "message": "create",
     "namespace": "System",
@@ -156,13 +156,13 @@ automation request itself, i.e. */api/automation_request/:id*
 {
   "results": [
     {
-      "id": 10,
+      "id": "10",
       "description": "Automation Task",
       "approval_state": "approved",
       "type": "AutomationRequest",
       "created_on": "2015-04-14T18:12:12Z",
       "updated_on": "2015-04-14T18:12:12Z",
-      "requester_id": 1,
+      "requester_id": "1",
       "requester_name": "Administrator",
       "request_type": "automation",
       "request_state": "pending",
@@ -172,7 +172,7 @@ automation request itself, i.e. */api/automation_request/:id*
         "namespace": "System",
         "class_name": "Request",
         "instance_name": "InspectME",
-        "user_id": 1,
+        "user_id": "1",
         "attrs": {
           "var1": "value 1",
           "var2": "value 2",
