--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -18,7 +18,6 @@ set_current_group for users https://github.com/ManageIQ/manageiq-api/pull/176
 Mask password attributes from automate_workspaces https://github.com/ManageIQ/manageiq-api/pull/168
 Add decorator for VNS console https://github.com/ManageIQ/manageiq-api/pull/167
 Custom Button CRUD https://github.com/ManageIQ/manageiq-api/pull/140
-Remove blueprint https://github.com/ManageIQ/manageiq-api/pull/139
 Add security group subcollection actions https://github.com/ManageIQ/manageiq-api/pull/137
 Return image_href and extension for pictures https://github.com/ManageIQ/manageiq-api/pull/127
 Return picture href for generic object subcollections https://github.com/ManageIQ/manageiq-api/pull/126
@@ -74,6 +73,7 @@ Add paging links to the API https://github.com/ManageIQ/manageiq/pull/15148
 Add support for Cloud Volume Delete action https://github.com/ManageIQ/manageiq/pull/15097
 configuration_script_sources subcollection https://github.com/ManageIQ/manageiq/pull/15070
 Return BadRequestError when invalid attributes are specified https://github.com/ManageIQ/manageiq/pull/15040
+Removed Blueprint support,
 Return hrefs on create,
 Enable custom actions for several collections,
 Support DELETE method for Custom Attributes,
