fixed typo in method

--- a/doc-Methods_Available_for_Automation/topics/Service2.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Service2.adoc
@@ -27,12 +27,12 @@
 
 | 
 						
-							customer_get
+							custom_get
 						
 					
 | 
 						
-							Gets Value for specified custom key
+							Gets value for specified custom key
 						
 					
 
